# aurotype

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  build.ps1  check-vite.ps1  debug-hotkey-test.ps1  debug-hotkey-test2.ps1  debug-run-long.ps1  debug-run.ps1  float.html  package.json  playwright.config.ts  release-please-config.json  skills-lock.json  start-vite.ps1  vite.config.ts
.github/workflows/: ci.yml  release.yml
.sisyphus/evidence/: task-5-registry.txt
.sisyphus/notepads/aurotype-mvp/: learnings.md
docs/: release.md
e2e/: gui-debug.spec.ts
engine/: aurotype-engine.spec  pyproject.toml
engine/aurotype_engine/: __init__.py  __main__.py  audio.py  config.py  pipeline.py  server.py
engine/aurotype_engine/providers/: __init__.py  llm_base.py  llm_deepseek.py  llm_none.py  llm_openai.py  llm_registry.py  llm_siliconflow.py  stt_aliyun_dashscope.py  stt_base.py  stt_dashscope.py  stt_deepgram.py  stt_groq.py  stt_registry.py  stt_siliconflow.py
src/: App.tsx  FloatWindow.tsx  Settings.css  Settings.tsx  float.css  float.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkey.rs  injection.rs  lib.rs  logging.rs  permissions.rs  sidecar.rs  state.rs  tray.rs
tests/: generate_test_audio.py  test_audio.py  test_config.py  test_llm_providers.py  test_pipeline.py  test_server.py  test_stt_providers.py
