[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aurotype-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
    "openai>=1.55.0",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]
